--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
       <id>chrome</id>
       <properties>
         <env>prod</env>
-        <remote.url></remote.url>
+        <remote.url>http://192.168.5.177:4444/wd/hub</remote.url>
         <site.url>http://moonsearch.com</site.url>
         <browser.name>chrome</browser.name>
       </properties>
