Change target to 8 (java)

--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>9</source>
-          <target>9</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
     </plugins>
@@ -64,7 +64,7 @@
       <id>local</id>
       <properties>
         <env>local</env>
-        <remote.url>http://192.168.1.225:4444/wd/hub</remote.url>
+        <remote.url></remote.url>
         <browser.name>chrome</browser.name>
         <site.url>http://moonsearch.com</site.url>
       </properties>
